<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">App Toolkit</string>

    <string name="root_access_success">Root Access Granted.</string>
    <string name="root_access_failed">Root Access Grant Failed.</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_backup">Backup</string>

    <!-- menu strings-->
    <string name="menu_mode_title">Select Apps</string>
    <string name="menu_mode_subtitle">%1$d Selected</string>
    <string name="menu_mode_select_all">Select All</string>
    <string name="menu_mode_unselect_all">Unselect All</string>
    <string name="menu_mode_delete">Delete Selected</string>
    <string name="menu_mode_backup_app">Backup Apps</string>
    <string name="menu_mode_backup_data">Backup Data</string>

    <string name="dialog_backup_title">Backuping</string>

    <string name="dialog_backup_all_apk_title">Backup Apks</string>
    <string name="dialog_backup_all_data_title">Backup Data</string>
    <string name="dialog_backup_all_apk_message">Are you sure backup all selected apps\' apk?</string>
    <string name="dialog_backup_all_data_message">Are you sure backup all selected apps\' data?</string>


    <string name="dialog_backup_complete_apk_title">Backup Apk Complete</string>
    <string name="dialog_backup_complete_apk_message">All Apps\' apk are Backup to %1$s, Total Backup Apps: %2$d, New
        Backup Apps: %3$d
    </string>
    <string name="dialog_backup_complete_data_title">Backup Data Complete</string>
    <string name="dialog_backup_complete_data_message">All Apps\' data are Backup to %1$s, Total Backup Apps: %2$d, New
        Backup Apps: %3$d
    </string>


    <string name="msg_backup_app_success">%1$s\'s apk is backuped to %2$s</string>
    <string name="msg_backup_data_success">%1$s\'s data is backuped to %2$s</string>
    <string name="msg_restore_data_success">%1$s\'s data is restored from backup.</string>
    <string name="msg_backup_failed_no_permission">Root access not granted, backup failed.</string>


    <!-- Mime/Types * Folder -->
    <string name="mime_folder">Folder</string>
    <!-- Mime/Types * Symlink -->
    <string name="mime_symlink">Symlink</string>
    <!-- Mime/Types * Unknown -->
    <string name="mime_unknown">Unknown</string>

    <!-- Devices types -->
    <string name="device_blockdevice">Block device</string>
    <string name="device_characterdevice">Character device</string>
    <string name="device_namedpipe">Named pipe</string>
    <string name="device_domainsocket">Domain socket</string>

    <!-- Human readable sizes -->
    <string name="size_bytes">B</string>
    <string name="size_kilobytes">kB</string>
    <string name="size_megabytes">MB</string>
    <string name="size_gigabytes">GB</string>

    <!-- App Operations-->
    <string name="action_view_appinfo">View App Detail</string>
    <string name="action_view_appsetting">View App Setting</string>
    <string name="action_backup_apk">Backup Apk to sdcard</string>
    <string name="action_backup_data">Backup Data to sdcard</string>
    <string name="action_restore_data">Restore Data from backup</string>
    <string name="action_view_data">View App Data</string>
    <string name="action_clear_data">Clear App Data</string>
    <string name="action_clear_cache">Clear App Cache</string>
    <string name="action_install">Install App</string>
    <string name="action_uninstall">Uninstall App</string>
    <string name="action_slient_install">Silent Install App</string>
    <string name="action_silent_uninstall">Silent Uninstall App</string>
    <string name="action_disable_app">Disable App</string>
    <string name="action_enable_app">Enable App</string>
    <string name="action_restart_package">Stop Task</string>
    <string name="action_kill_process">Kill Process</string>
    <string name="action_install_system">Install To System</string>
    <string name="action_uninstall_system">Uninstall From System</string>
    <string name="action_view_playstore">View Playstore Page</string>
    <string name="action_copy_package">Copy PackageName</string>
    <string name="action_view_manifest">View AndroidManifest File</string>
    <string name="action_view_resource">View Resources</string>
    <!-- Common Operations -->
    <string name="menu_appmanager">App Manager</string>
    <string name="menu_backupmanager">Backup Manager</string>
    <string name="menu_processmanager">Process Manager</string>
    <string name="menu_componentmanager">Component Manager</string>
    <string name="menu_receivermanager">Start Manager</string>
    <string name="menu_servicemanager">Service Manager</string>
    <string name="menu_filemanager">File Manager</string>
    <string name="menu_cachemanager">Cache Manager</string>
    <string name="menu_networkmanager">Network Tools</string>
    <string name="menu_toolkit">System Tools</string>
    <string name="menu_about">About App</string>

    <string name="action_dialog_title">Choose Operation</string>


    <!-- Preferences-->


    <string name="pref_version_key">pref_version_key</string>
    <string name="pref_version_title">App Info</string>
    <string name="pref_version_summary">Current Version: %1$s</string>
    <string name="pref_version_url">https://play.google.com/store/apps/details?id=com.mcxiaoke.apptoolkit</string>

    <string name="pref_github_key">pref_github_key</string>
    <string name="pref_github_title">Project Page</string>
    <string name="pref_github_summary">https://github.com/mcxiaoke/apptoolkit</string>
</resources>
