<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
            android:key="@string/pref_version_key"
            android:title="@string/pref_version_title"
            android:summary="@string/pref_version_summary">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_version_url"/>
    </Preference>

    <Preference
            android:key="@string/pref_github_key"
            android:title="@string/pref_github_title"
            android:summary="@string/pref_github_summary">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_github_summary"/>
    </Preference>

</PreferenceScreen>